@startuml email_lists_er
entity email_lists {
  * id : INT [PK]
  --
  * name : VARCHAR(100) [UNIQUE]
  description : TEXT
  * active_member : ENUM('active','inactive','all')
  * visible : TINYINT(1)
  * created_by : INT [FK]
  * created_at : DATETIME
  * updated_at : DATETIME
}

entity email_list_roles {
  * id : INT [PK]
  --
  * email_list_id : INT [FK]
  * types_roles_id : INT [FK]
  * section_id : INT [FK]
  granted_by : INT [FK]
  granted_at : DATETIME
  revoked_at : DATETIME
  notes : TEXT
}

entity email_list_members {
  * id : INT [PK]
  --
  * email_list_id : INT [FK]
  * membre_id : VARCHAR(25) [FK]
  * added_at : DATETIME
}

entity email_list_external {
  * id : INT [PK]
  --
  * email_list_id : INT [FK]
  * external_email : VARCHAR(255)
  external_name : VARCHAR(100)
  source_file : VARCHAR(255)
  * added_at : DATETIME
}

entity users {
  * id : INT [PK]
  --
  * username : VARCHAR(25)
  * email : VARCHAR(100)
  password : VARCHAR(34)
  banned : TINYINT(1)
}

entity membres {
  * mlogin : VARCHAR(25) [PK]
  --
  * mnom : VARCHAR(80)
  * mprenom : VARCHAR(80)
  memail : VARCHAR(50)
  actif : TINYINT(4)
  username : VARCHAR(25)
}


entity types_roles {
  * id : INT [PK]
  --
  * nom : VARCHAR(64)
  description : VARCHAR(128)
  scope : ENUM('global','section')
}

entity sections {
  * id : INT [PK]
  --
  * nom : VARCHAR(64)
  description : VARCHAR(128)
}

email_lists ||--o{ email_list_roles : selection_roles
email_lists ||--o{ email_list_members : selection_manuelle
email_lists ||--o{ email_list_external : adresses_externes
email_list_members }o--|| membres : references
email_lists }o--|| users : created_by

email_list_roles }o--|| types_roles : role_type
email_list_roles }o--|| sections : in_section
users ||--o| membres : linked_via_username

note right of email_list_roles
  **Sélection dynamique par rôles**
  Référence types_roles_id + section_id
  pour sélection automatique des membres
  ayant ces rôles 
end note

note right of email_list_members
  **Sélection manuelle**
  FK directe vers membres.mlogin
end note

note right of email_list_external
  **Adresses externes**
  Adresses email brutes

  **source_file**: nom du fichier
  source pour traçabilité (NULL si
  ajout manuel)
end note

note right of email_lists
  **active_member**: filtre les membres
  actifs/inactifs lors de la résolution

  **visible**: contrôle si la liste
  apparaît dans les sélecteurs UI
end note
@enduml
